--- a/about.html
+++ b/about.html
@@ -18,12 +18,12 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>骆孟思</strong>，一只iOS程序猿，现在厦门工作。</p>
+    <p>Hey，我是<strong>骆孟思</strong>，一只程序猿，现在广州工作。</p>
+	<p>工作内容主要是大数据、数据挖掘、机器学习、推荐系统，对自然语言处理也感兴趣。</p>
 
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
+    <p>平时除了上班，就是在公司的健身房健身，或是看看历史书。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
-
+    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。
     <p></p>
     
     <h5>Talks</h5>
