--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>好好学习，天天向上<br>
+    慢慢来，比较快！</p></blockquote>
 
     <p>Hey，我是<strong>骆孟思</strong>，一只程序猿，现在广州工作。</p>
 	<p>工作内容主要是大数据、数据挖掘、机器学习、推荐系统，对自然语言处理也感兴趣。</p>
